syntax = "proto3";

service Driversvc {
    rpc GetDrivers(GetDriversRequest) returns (GetDriversResponse) {}
}

message GetDriversRequest {
    string id = 1;
}

message GetDriversResponse {
    repeated Driver drivers = 1;
}

message Driver {
    string id = 1;
    string name = 2;
}
